refactor : fix many-to-many